[gd_scene load_steps=14 format=3 uid="uid://b7qgvql7ifvq5"]

[ext_resource type="Script" uid="uid://dpnl1mm62n8q1" path="res://sandbox/scripts/LevelSandbox/station_lvl_sandbox.gd" id="1_ycxcm"]
[ext_resource type="Shader" uid="uid://dksxj0hluoa8f" path="res://backup_old/Shaders/build_station.gdshader" id="2_ibhb3"]
[ext_resource type="Texture2D" uid="uid://c3e1xphfgndjb" path="res://backup_old/Assets/Rescue Station/rescue_station_4.png" id="3_afsod"]
[ext_resource type="Texture2D" uid="uid://u3dkhecguxkp" path="res://backup_old/Assets/Rescue Station/rescue_station_2.png" id="4_ct4wl"]
[ext_resource type="Texture2D" uid="uid://bc6ae7dvqt8hn" path="res://backup_old/Assets/Rescue Station/rescue_station_3.png" id="5_lvfa8"]
[ext_resource type="Texture2D" uid="uid://b0bh0dre1prsg" path="res://backup_old/Assets/Buttons/mask.png" id="6_gkx8e"]
[ext_resource type="Script" uid="uid://e51081tjtwso" path="res://entities/station_radius.gd" id="7_ibhb3"]
[ext_resource type="AudioStream" uid="uid://drqmtyfif7ogv" path="res://assets/sfx/construct station.mp3" id="8_bc8us"]
[ext_resource type="AudioStream" uid="uid://cqiog03fw2lop" path="res://assets/sfx/destroy.mp3" id="9_4yi0p"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_11f5k"]
shader = ExtResource("2_ibhb3")
shader_parameter/wiggle_speed = 2.0
shader_parameter/wiggle_offset = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_eonqi"]
shader = ExtResource("2_ibhb3")
shader_parameter/wiggle_speed = 2.0
shader_parameter/wiggle_offset = 0.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_0jdor"]
shader = ExtResource("2_ibhb3")
shader_parameter/wiggle_speed = 2.0
shader_parameter/wiggle_offset = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_jpnfl"]
radius = 11.7335

[node name="StationLVLSandbox" type="Node2D"]
script = ExtResource("1_ycxcm")

[node name="Designs" type="Node2D" parent="."]
z_index = 2
position = Vector2(0, -11)

[node name="Station1" type="Sprite2D" parent="Designs"]
material = SubResource("ShaderMaterial_11f5k")
texture = ExtResource("3_afsod")

[node name="Station2" type="Sprite2D" parent="Designs"]
material = SubResource("ShaderMaterial_eonqi")
texture = ExtResource("4_ct4wl")

[node name="Station3" type="Sprite2D" parent="Designs"]
material = SubResource("ShaderMaterial_0jdor")
texture = ExtResource("5_lvfa8")

[node name="Plot" type="Button" parent="."]
texture_filter = 1
offset_left = -31.0
offset_right = 31.0
offset_bottom = 36.0
text = "x
xM â‚¬"

[node name="OptResult" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0

[node name="HighlightRect" type="TextureRect" parent="OptResult"]
visible = false
layout_mode = 0
offset_left = -56.0
offset_top = -34.0
offset_right = 168.0
offset_bottom = 190.0
scale = Vector2(0.5, 0.5)
texture = ExtResource("6_gkx8e")
expand_mode = 1

[node name="Radius" type="Area2D" parent="."]
texture_filter = 1

[node name="RadiusSize" type="CollisionShape2D" parent="Radius"]
visible = false
scale = Vector2(15, 15)
shape = SubResource("CircleShape2D_jpnfl")
debug_color = Color(0.984314, 0.968627, 0.988235, 0.188235)

[node name="RadiusVisual" type="Node2D" parent="Radius"]
visible = false
script = ExtResource("7_ibhb3")

[node name="build sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_bc8us")

[node name="destroy sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_4yi0p")
pitch_scale = 0.5

[connection signal="button_up" from="Plot" to="." method="_on_plot_button_up"]
[connection signal="mouse_entered" from="Plot" to="." method="_on_plot_mouse_entered"]
[connection signal="mouse_exited" from="Plot" to="." method="_on_plot_mouse_exited"]
[connection signal="area_entered" from="Radius" to="." method="_on_radius_area_entered"]
